--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,5 @@
 ---
-layout: blog
+layout: default
 ---
 
-<article class="post">
- <div class="space-extra-small">
- </div>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-
-  {% include disqus.html %}
-</article>
-
+{{ content }}
