changed base color for text #00ff00

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -3,7 +3,7 @@
  */
 
 :root {
-  --base-color: #DBDBDB;
+  --base-color: #00ff00;
   --primary-color: #A2FC8F;
   --border: dashed 1px rgba(219, 219, 219, 0.9);
   --selection-background: rgba(219, 219, 219, 0.99);
